Changes since version 2.1.2
---------------------------

- Connection::close(false) (i.e., graceful connection shutdown) now
  waits until all outstanding requests have completed.

- Added a new object adapter property, <adapter>.ReplicaGroupId, which
  allows adapters to be replicated. See the IceGrid chapter in the
  manual for more information.

- Added the following properties:

  IceBox.InstanceName
  IcePatch2.InstanceName
  IceStorm.InstanceName
  Glacier2.InstanceName

  These properties make it more convenient to configure multiple
  instances of these services by modifying the identity category of
  their well-known objects. The properties listed below are now
  deprecated and will be removed in a future release:

  IceBox.ServiceManager.Identity
  IcePatch2.Identity
  IcePatch2.AdminIdentity
  IceStorm.TopicManagerIdentity
  Glacier2.AdminIdentity
  Glacier2.RouterIdentity

- Added the proxy method ice_connectionId, which allows an application
  to control connection reuse.

- Added the new methods Ice::initializeWithLogger() and
  Ice::initializeWithPropertiesAndLogger(), which ensure that a custom
  logger is used to record any errors during communicator
  initialization.

- Ice will now listen on all local interfaces if no -h parameter is
  present in the endpoint configuration and no default host has been
  set. It will also listen to all interfaces if the -h parameter is
  set to 0.0.0.0. In such configurations the endpoints published in
  proxies will not contain the loopback interface (127.0.0.1) unless
  it is the only local interface present.

- Fixed a race condition with the object adapter holding state.

- Changed the way servant locators work if a server has a servant
  locator registered for a specific category, in addition to a default
  servant locator. Previously, if the locator for the specific
  category failed to locate the servant, the run time would then call
  the default locator. With the new behavior, if the locator for the